--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,21 @@
 .header {
-    background-color: blue;
+    background-color: #507299;
     grid-area: h;
 }
 
 .header img {
+    margin-top: 5px;
     margin-left: 10px;
     width: 50px;
+}
+
+.loginBlock {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    float: right;
+}
+
+.loginBlock a {
+    color: white;
 }
