--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -5,8 +5,34 @@
 }
 
 .userWrapper{
-    margin-bottom: 50px;
+    margin: 25px 10px ;
     border: 1px solid #b3b3b3;
+}
+
+.but{
+    border: none;
+    outline: none;
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4095c6;
+    text-align:center;
+    transition: all 0.2s;
+}
+.but:hover{
+    background-color:#507299;
+}
+@media all and (max-width:30em){
+    .but{
+        display:block;
+        margin:0.2em auto;
+    }
 }
 
 .userWrapper a {
